# CodefyUI-OJ

./: .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 10987747ce39_add_problems_table.py  1775c0fc9dc0_initial_users_table.py  298d07770bfb_add_contests_submissions_tables.py  b1f4a2c1d8e0_add_practice_visible_to_problems.py
backend/app/: config.py  db.py  main.py
backend/app/api/: admin.py  auth.py  contests.py  leaderboard.py  problems.py  submissions.py  system.py  users.py
backend/app/core/: permissions.py  security.py  storage.py
backend/app/judge/: events.py  queue.py  runner.py  worker.py
backend/app/models/: __init__.py  contest.py  problem.py  submission.py  user.py
backend/app/schemas/: contest.py  judge_spec.py  problem.py  submission.py  user.py
backend/app/seeding/: __init__.py  datasets.py  problems.py  runner.py
backend/docker/: api.Dockerfile  build_sandbox.ps1  build_sandbox.sh  entrypoint.sh  sandbox.Dockerfile  worker.Dockerfile
backend/sandbox/: patcher.py  requirements.txt  run_judge.py  scoring.py
backend/storage/submissions/1/: submission.json
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_contests.py  test_events.py  test_health.py  test_leaderboard_sse.py  test_leaderboard_weighting.py  test_patcher.py  test_problems.py  test_runtime_concurrency.py  test_scoring.py  test_seeding.py  test_smoke.py  test_submissions.py  test_system.py
docs/: deployment.md
(+120 files in other folders)
